--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-.DS_Store
 node_modules/
-/dist/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+www/
+platforms/
+plugins/
+dist/
+*.log
+package-lock.json
+/index.html
 
 # Editor directories and files
 .idea
